<resources>

    <!-- Strings related to Accessibility -->
    <string name="app_accessibility_description">Please switch ON this option in order to use Text Pilot. This permission allows Text Pilot to detect the supported apps and obtain the messages on the screen.</string>

    <!-- Strings related to Settings -->
    <string name="pref_customization">Customization</string>
    <string name="pref_auto_detect">Auto Detection</string>

    <string name="pref_title_master_switch">Master Switch</string>
    <string name="pref_description_master_switch">Enable Text Pilot service</string>

    <string name="pref_title_temperature">Temperature</string>
    <string name="pref_description_temperature">Temperature parameter of the LLM</string>

    <string name="pref_api_url">OpenAI-compatible API Endpoint</string>
    <string name="pref_description_api_url">URL of any OpenAI-compatible API endpoint</string>

    <string name="pref_api_key">API Key</string>
    <string name="pref_description_api_key">API Key for the API Endpoint</string>


    <!-- Universal strings -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="vid_tut">Video Tutorial</string>
    <string name="done">Done</string>
    <string name="setup_now">Setup Now</string>
    <string name="skip">Skip</string>
    <string name="running">Text Pilot is running</string>
    <string name="tap4settings">Tap for settings</string>

    <string name="permission_overlay_title">Grant Permission</string>
    <string name="permission_overlay_description"><b>Draw over other apps</b> permission needs to be granted by the following instructions:\n1. Press <b>Next</b>\n2. Select <b>Text Pilot</b>.\n3. Toggle on the switch</string>

    <string name="permission_accessibility_title">Enable Accessibility Service</string>
    <string name="permission_accessibility_description"><b>Accessibility service</b> needs to be enabled by the following instructions:\n1. Press <b>Next</b>\n2. Select <b>Text Pilot</b>.\n3. Toggle on the switch</string>

    <string name="permission_disable_title">Disable Manually</string>
    <string name="permission_disable_description"><b>Accessibility service</b> needs to be disabled by the following instructions:\n1. Press <b>Next</b>\n2. Select <b>Text Pilot</b>.\n3. Toggle off the switch</string>
    <string name="app_accessibility_started">Text Pilot auto detection is started</string>
    <string name="tutorial_permission_done">Everything is set up, you may continue to the next step</string>

    <string name="thank_support">Thank you for supporting our app!</string>
    <string name="pref_github">Visit the Github repo</string>
    <string name="pref_about">About</string>
    <string name="pref_title_topp">TopP</string>
    <string name="pref_description_topp">TopP parameter of the LLM</string>
    <string name="pref_ig_follow">Follow Us on Instagram</string>
    <string name="app_name">Text Pilot</string>
    <string name="pref_description_system_prompt">The system prompt for the AI</string>

</resources>
