<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="app.textpilot.WelcomeActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:gravity="bottom"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:text="@string/permission_accessibility_title"
                android:layout_marginBottom="32sp"
                android:layout_marginTop="16dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/permission_accessibility_description"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

        </LinearLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:scaleType="fitCenter"
            android:padding="16dp"
            app:srcCompat="@drawable/accessibility_grant_permission"
            android:layout_weight="1"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:alpha="0.12"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
<!--            <Button-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="56dp"-->
<!--                android:text="@string/vid_tut"-->
<!--                style="@style/Widget.AppCompat.Button.Borderless"-->
<!--                android:textColor="#FFFFFF"-->
<!--                android:layout_gravity="right"-->
<!--                android:onClick="openVideoTutorial" />-->

            <Button
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:text="@string/next"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_gravity="center"
                android:onClick="openAccessibilitySettings" />
        </LinearLayout>

    </LinearLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>